--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,8 @@ services:
         build: 
             context: .
             dockerfile: Dockerfile
+        volumes:
+            - .:/app
         env_file:
             - .env
         depends_on: 
